crates/tui/snapshots/fullscreen/guardian/guardian_setup_fullscreen_chinese.snap
---
source: crates/tui/src/app/guardian_tests.rs
expression: render(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
> /guard┌── Guardian ──────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  /project                                                    │        
        │  扫 描 项 目 …                                                 + │        
        │  保 存 已 审 核 资 料                                             + │        
        │> ASH.md                                             已 接 受  + │        
        │  读 取 项 目 近 期 会 话                                    已 禁 用  + │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > 构 建 任 何 内 容                                                                 
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  Enter 确 认  · ←/→ 详 情  · Esc 关 闭
